# soraka

./: CMakeLists.txt  LICENSE  doc.sh  format.sh  tidy.sh  vcpkg.json  vcpkg.sh
doc/: Doxyfile
include/soraka/person/: person.h
include/soraka/util/: log_util.h
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/person/: CMakeLists.txt  person.cpp
src/util/: CMakeLists.txt  log_util.cpp
test/: CMakeLists.txt  test_common.cpp  testmain.cpp
